style: fix alignment of verify otp block

--- a/src/public/modules/core/css/edit-contact-number-modal.css
+++ b/src/public/modules/core/css/edit-contact-number-modal.css
@@ -143,6 +143,7 @@
 #edit-contact-modal .ecm__otp {
   color: #2f60ce;
   margin-left: 24px;
+  text-align: left;
 }
 
 #edit-contact-modal .ecm__otp__header {
